--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,8 +11,8 @@ default:
       fi
     - NPM_PACKAGE_NAME=$(node -p "require('./package.json').name")
     - NPM_PACKAGE_VERSION=$(node -p "require('./package.json').version")
-    - git config --global http.sslCAInfo ./ca-bundle-including-iav_gitlab
-    - npm config set cafile ./ca-bundle-including-iav_gitlab
+    - git config --global http.sslCAInfo ./ca-bundle-including-iav_gitlab.crt
+    - npm config set cafile ./ca-bundle-including-iav_gitlab.crt
 
 # Validate that the package name is properly scoped to the project's root namespace.
 # For more information, see https://docs.gitlab.com/ee/user/packages/npm_registry/#package-naming-convention
