--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,11 +67,13 @@ publish_package:
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
   
-  create_release:
-    image: registry.gitlab.com/gitlab-org/release-cli:latest
-    stage: deploy
-    script:
-      - echo "Creating release ..."
-    release:
-      tag_name: ${MAJOR}_${MINOR}_${REVISION}
-      description: "Test release"
+create_release:
+  image: registry.gitlab.com/gitlab-org/release-cli:latest
+  stage: deploy
+  script:
+    - echo "Creating release ..."
+  release:
+    tag_name: ${MAJOR}_${MINOR}_${REVISION}
+    description: "Test release"
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "master"'
