Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,7 +69,7 @@ publish_package:
   
 create_release:
   image: registry.gitlab.com/gitlab-org/release-cli:latest
-  stage: deploy
+  stage: .post
   script:
     - echo "Creating release ..."
   release:
