--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,22 +2,23 @@ default:
   image: node:latest
 
   # Validate that the repository contains a package.json and extract a few values from it. Setting certificates for npm.
-  before_script:
-    - |
-      if [[ ! -f package.json ]]; then
-        echo "No package.json found! A package.json file is required to publish a package to GitLab's NPM registry."
-        echo 'For more information, see https://docs.gitlab.com/ee/user/packages/npm_registry/#creating-a-project'
-        exit 1
-      fi
-    - NPM_PACKAGE_NAME=$(node -p "require('./package.json').name")
-    - NPM_PACKAGE_VERSION=$(node -p "require('./package.json').version")
-    - npm config set cafile ./ca-bundle-including-iav_gitlab.crt
+#  before_script:
+#    - |
+#      if [[ ! -f package.json ]]; then
+#        echo "No package.json found! A package.json file is required to publish a package to GitLab's NPM registry."
+#        echo 'For more information, see https://docs.gitlab.com/ee/user/packages/npm_registry/#creating-a-project'
+#        exit 1
+#      fi
+#    - NPM_PACKAGE_NAME=$(node -p "require('./package.json').name")
+#    - NPM_PACKAGE_VERSION=$(node -p "require('./package.json').version")
+#    - npm config set cafile ./ca-bundle-including-iav_gitlab.crt
 
 # Validate that the package name is properly scoped to the project's root namespace.
 # For more information, see https://docs.gitlab.com/ee/user/packages/npm_registry/#package-naming-convention
 validate_package_scope:
   stage: build
   script:
+    - ./ci_cd/scripts/setup_npm
     - |
       if [[ ! $NPM_PACKAGE_NAME =~ ^@$CI_PROJECT_ROOT_NAMESPACE/ ]]; then
         echo "Invalid package scope! Packages must be scoped in the root namespace of the project, e.g. \"@${CI_PROJECT_ROOT_NAMESPACE}/${CI_PROJECT_NAME}\""
@@ -32,6 +33,7 @@ validate_package_scope:
 create_npmrc:
   stage: build
   script:
+    - ./ci_cd/scripts/setup_npm
     - |
       if [[ ! -f .npmrc ]]; then
         echo 'No .npmrc found! Creating one now. Please review the following link for more information: https://docs.gitlab.com/ee/user/packages/npm_registry/index.html#authenticating-with-a-ci-job-token'
@@ -55,6 +57,7 @@ create_npmrc:
 publish_package:
   stage: deploy
   script:
+    - ./ci_cd/scripts/setup_npm
     - |
       {
         echo $CI_COMMIT_DESCRIPTION
