Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,8 @@ default:
   image: node:latest
 
   # Validate that the repository contains a package.json and extract a few values from it. Setting certificates for npm.
-#  before_script:
+  before_script:
+    - ./ci_cd/scripts/setup_npm
 #    - |
 #      if [[ ! -f package.json ]]; then
 #        echo "No package.json found! A package.json file is required to publish a package to GitLab's NPM registry."
