--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ validate_package_scope:
       fi
     - NPM_PACKAGE_NAME=$(node -p "require('./package.json').name")
     - NPM_PACKAGE_VERSION=$(node -p "require('./package.json').version")
-    - npm config set cafile ./ca-bundle-including-iav_gitlab.crt
+    - npm config set cafile ./ci_cd/ca-bundle-including-iav_gitlab.crt
     - |
       if [[ ! $NPM_PACKAGE_NAME =~ ^@$CI_PROJECT_ROOT_NAMESPACE/ ]]; then
         echo "Invalid package scope! Packages must be scoped in the root namespace of the project, e.g. \"@${CI_PROJECT_ROOT_NAMESPACE}/${CI_PROJECT_NAME}\""
@@ -50,7 +50,7 @@ create_npmrc:
       fi
     - NPM_PACKAGE_NAME=$(node -p "require('./package.json').name")
     - NPM_PACKAGE_VERSION=$(node -p "require('./package.json').version")
-    - npm config set cafile ./ca-bundle-including-iav_gitlab.crt
+    - npm config set cafile ./ci_cd/ca-bundle-including-iav_gitlab.crt
     - |
       if [[ ! -f .npmrc ]]; then
         echo 'No .npmrc found! Creating one now. Please review the following link for more information: https://docs.gitlab.com/ee/user/packages/npm_registry/index.html#authenticating-with-a-ci-job-token'
@@ -82,7 +82,7 @@ publish_package:
       fi
     - NPM_PACKAGE_NAME=$(node -p "require('./package.json').name")
     - NPM_PACKAGE_VERSION=$(node -p "require('./package.json').version")
-    - npm config set cafile ./ca-bundle-including-iav_gitlab.crt
+    - npm config set cafile ./ci_cd/ca-bundle-including-iav_gitlab.crt
     - |
       {
         echo $CI_COMMIT_DESCRIPTION
@@ -99,6 +99,10 @@ create_release:
   image: registry.gitlab.com/gitlab-org/release-cli:latest
   stage: .post
   script:
+    - cp ./ci_cd/ca-bundle-including-iav_gitlab.crt /etc/pki/trust/anchors/
+    - update-ca-certificates
+    - systemctl docker stop
+    - systemctl docker start
     - echo "Creating release ..."
   release:
     tag_name: ${MAJOR}_${MINOR}_${REVISION}
