--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -99,7 +99,7 @@ create_release:
   image: registry.gitlab.com/gitlab-org/release-cli:latest
   stage: .post
   script:
-    - cp ./ci_cd/ca-bundle-including-iav_gitlab.crt /etc/pki/trust/anchors/
+    - cp ./ci_cd/ca-bundle-including-iav_gitlab.crt /etc/pki/trust/anchors/ca-bundle-including-iav_gitlab.crt
     - update-ca-certificates
     - systemctl docker stop
     - systemctl docker start
