--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,6 +98,8 @@ publish_package:
 create_release:
   image: registry.gitlab.com/gitlab-org/release-cli:latest
   stage: .post
+  variables:
+    SSL_CERT_FILE: "./ci_cd/ca-bundle-including-iav_gitlab.crt"
   script:
     - echo "Creating release ..."
   release:
