--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,12 @@ default:
 
 # Validate that the package name is properly scoped to the project's root namespace.
 # For more information, see https://docs.gitlab.com/ee/user/packages/npm_registry/#package-naming-convention
+
+test:
+  stage: build
+  script:
+    - $IAV_CA_BUNDLE
+
 validate_package_scope:
   stage: build
   script:
@@ -36,6 +42,7 @@ validate_package_scope:
       fi
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
+      when: never
 
 # If no .npmrc if included in the repo, generate a temporary one to use during the publish step
 # that is configured to publish to GitLab's NPM registry
@@ -67,6 +74,7 @@ create_npmrc:
       - .npmrc
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
+      when: never
 
 # Publish the package. If the version in package.json has not yet been published, it will be
 # published to GitLab's NPM registry. If the version already exists, the publish command
@@ -94,6 +102,7 @@ publish_package:
       }
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
+      when: never
   
 create_release:
   image: registry.gitlab.com/gitlab-org/release-cli:latest
@@ -107,3 +116,4 @@ create_release:
     description: "Test release"
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
+      when: never
