--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,8 @@ default:
   image: node:latest
 
   # Validate that the repository contains a package.json and extract a few values from it. Setting certificates for npm.
-#  before_script:
+  before_script:
+    - curl --cacert $IAV_CA_BUNDLE "https://gitlab.iavgroup.local"
 #    - chmod +x ./ci_cd/scripts/setup_npm.sh
 #    - |
 #      if [[ ! -f package.json ]]; then
@@ -16,11 +17,6 @@ default:
 
 # Validate that the package name is properly scoped to the project's root namespace.
 # For more information, see https://docs.gitlab.com/ee/user/packages/npm_registry/#package-naming-convention
-
-test:
-  stage: build
-  script:
-    - echo $IAV_CA_BUNDLE
 
 validate_package_scope:
   stage: build
@@ -42,7 +38,6 @@ validate_package_scope:
       fi
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
-      when: never
 
 # If no .npmrc if included in the repo, generate a temporary one to use during the publish step
 # that is configured to publish to GitLab's NPM registry
@@ -74,7 +69,6 @@ create_npmrc:
       - .npmrc
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
-      when: never
 
 # Publish the package. If the version in package.json has not yet been published, it will be
 # published to GitLab's NPM registry. If the version already exists, the publish command
@@ -102,7 +96,6 @@ publish_package:
       }
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
-      when: never
   
 create_release:
   image: registry.gitlab.com/gitlab-org/release-cli:latest
@@ -116,4 +109,3 @@ create_release:
     description: "Test release"
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
-      when: never
