--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,9 @@ default:
 
   # Validate that the repository contains a package.json and extract a few values from it. Setting certificates for npm.
   before_script:
-    - apk add --update curl && rm -rf /var/cache/apk/*
+    - if ! command -v COMMAND &> /dev/null then
+        fiapk add --update curl && rm -rf /var/cache/apk/*
+      fi
     - curl --cacert $IAV_CA_BUNDLE "https://gitlab.iavgroup.local"
 #    - chmod +x ./ci_cd/scripts/setup_npm.sh
 #    - |
