--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ default:
   # Validate that the repository contains a package.json and extract a few values from it. Setting certificates for npm.
   before_script:
     - if ! command -v curl &> /dev/null then
-        fiapk add --update curl && rm -rf /var/cache/apk/*
+        apk add --update curl && rm -rf /var/cache/apk/*
       fi
     - curl --cacert $IAV_CA_BUNDLE "https://gitlab.iavgroup.local"
 #    - chmod +x ./ci_cd/scripts/setup_npm.sh
