--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,8 @@ default:
 
   # Validate that the repository contains a package.json and extract a few values from it. Setting certificates for npm.
   before_script:
-    - if [! command -v curl &> "/dev/null"]; then
-        apk add --update curl && rm -rf "/var/cache/apk/*";
+    - if [! type "curl" &> /dev/null]; then
+        apk add --update curl && rm -rf /var/cache/apk/*;
         exit 0;
       fi
     - curl --cacert $IAV_CA_BUNDLE "https://gitlab.iavgroup.local"
