--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,11 +3,11 @@ default:
 
   # Validate that the repository contains a package.json and extract a few values from it. Setting certificates for npm.
   before_script:
-    - if ! [curl --help &>> /dev/null]; then
-        apk add --update curl && rm -rf /var/cache/apk/*;
-        exit 0;
-      fi
-    - curl --cacert $IAV_CA_BUNDLE "https://gitlab.iavgroup.local"
+#    - if ! [curl --help &>> /dev/null]; then
+#        apk add --update curl && rm -rf /var/cache/apk/*;
+#        exit 0;
+#      fi
+#    - curl --cacert $IAV_CA_BUNDLE "https://gitlab.iavgroup.local"
 #    - chmod +x ./ci_cd/scripts/setup_npm.sh
 #    - |
 #      if [[ ! -f package.json ]]; then
