--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,11 +3,6 @@ default:
 
   # Validate that the repository contains a package.json and extract a few values from it. Setting certificates for npm.
   before_script:
-#    - if ! [curl --help &>> /dev/null]; then
-#        apk add --update curl && rm -rf /var/cache/apk/*;
-#        exit 0;
-#      fi
-#    - curl --cacert $IAV_CA_BUNDLE "https://gitlab.iavgroup.local"
 #    - chmod +x ./ci_cd/scripts/setup_npm.sh
 #    - |
 #      if [[ ! -f package.json ]]; then
@@ -80,15 +75,16 @@ create_npmrc:
 publish_package:
   stage: deploy
   script:
-    - |
-      if [[ ! -f package.json ]]; then
-        echo "No package.json found! A package.json file is required to publish a package to GitLab's NPM registry."
-        echo 'For more information, see https://docs.gitlab.com/ee/user/packages/npm_registry/#creating-a-project'
-        exit 1
-      fi
-    - NPM_PACKAGE_NAME=$(node -p "require('./package.json').name")
-    - NPM_PACKAGE_VERSION=$(node -p "require('./package.json').version")
-    - npm config set cafile $IAV_CA_BUNDLE
+    - ./ci_cd/scripts/setup_npm.sh
+#    - |
+#      if [[ ! -f package.json ]]; then
+#        echo "No package.json found! A package.json file is required to publish a package to GitLab's NPM registry."
+#        echo 'For more information, see https://docs.gitlab.com/ee/user/packages/npm_registry/#creating-a-project'
+#        exit 1
+#      fi
+#    - NPM_PACKAGE_NAME=$(node -p "require('./package.json').name")
+#    - NPM_PACKAGE_VERSION=$(node -p "require('./package.json').version")
+#    - npm config set cafile $IAV_CA_BUNDLE
     - |
       {
         echo $CI_COMMIT_DESCRIPTION
