--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,8 @@ validate_package_scope:
         echo 'For more information, see https://docs.gitlab.com/ee/user/packages/npm_registry/#creating-a-project'
         exit 1
       fi
+    - echo Environment
+    - echo $NPM_PACKAGE_NAME
     - |
       if [[ ! $NPM_PACKAGE_NAME =~ ^@$CI_PROJECT_ROOT_NAMESPACE/ ]]; then
         echo "Invalid package scope! Packages must be scoped in the root namespace of the project, e.g. \"@${CI_PROJECT_ROOT_NAMESPACE}/${CI_PROJECT_NAME}\""
