--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,6 +74,7 @@ create_release:
   variables:
     SSL_CERT_FILE: $IAV_CA_BUNDLE
   script:
+    - apk add --update npm
     - source ./ci_cd/scripts/set_npm_variables.sh
   release:
     tag_name: ${MAJOR}_${MINOR}_${REVISION}
