--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,6 @@ default:
 
 # Validate that the package name is properly scoped to the project's root namespace.
 # For more information, see https://docs.gitlab.com/ee/user/packages/npm_registry/#package-naming-convention
-
 validate_package_scope:
   stage: build
   script:
@@ -18,8 +17,6 @@ validate_package_scope:
         echo 'For more information, see https://docs.gitlab.com/ee/user/packages/npm_registry/#creating-a-project'
         exit 1
       fi
-    - echo Environment
-    - echo $NPM_PACKAGE_NAME
     - |
       if [[ ! $NPM_PACKAGE_NAME =~ ^@$CI_PROJECT_ROOT_NAMESPACE/ ]]; then
         echo "Invalid package scope! Packages must be scoped in the root namespace of the project, e.g. \"@${CI_PROJECT_ROOT_NAMESPACE}/${CI_PROJECT_NAME}\""
@@ -67,7 +64,8 @@ publish_package:
       }
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
-  
+
+# Create release so observer of this project will get a notification e-mail.
 create_release:
   stage: .post
   image: registry.gitlab.com/gitlab-org/release-cli:latest
@@ -77,7 +75,7 @@ create_release:
     - apk add --update npm
     - source ./ci_cd/scripts/set_npm_variables.sh
   release:
-    tag_name: ${MAJOR}_${MINOR}_${REVISION}
+    tag_name: $NPM_PACKAGE_VERSION
     description: "Test release"
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
