--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,7 +75,7 @@ create_release:
     - apk add --update npm
     - source ./ci_cd/scripts/set_npm_variables.sh
   release:
-    tag_name: $NPM_PACKAGE_VERSION
+    tag_name: ${NPM_PACKAGE_VERSION}
     description: "Test release"
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
