--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,7 +76,7 @@ create_release:
     - source ./ci_cd/scripts/set_npm_variables.sh
     - echo $NPM_PACKAGE_VERSION
   release:
-    tag_name: 'Release v ${$CI_COMMIT_BRANCH}'
+    tag_name: 'Release v ${CI_COMMIT_BRANCH}'
     description: "Test release"
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
