Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,8 +75,9 @@ create_release:
     - apk add --update npm
     - source ./ci_cd/scripts/set_npm_variables.sh
     - echo $NPM_PACKAGE_VERSION
+#${MAJOR}_${MINOR}_${REVISION}
   release:
-    tag_name: ${MAJOR}_${MINOR}_${REVISION}
+    tag_name: ${NPM_PACKAGE_VERSION}
     description: "Test release"
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
