Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,7 +75,7 @@ create_release:
     - apk add --update npm
     - source ./ci_cd/scripts/set_npm_variables.sh
     - echo $NPM_PACKAGE_VERSION
-    - export MAJOR=$NPM_PACKAGE_VERSION
+    - export CI_COMMIT_BRANCH=$NPM_PACKAGE_VERSION
 #${MAJOR}_${MINOR}_${REVISION}
   release:
     tag_name: ${CI_COMMIT_BRANCH}
