added file for first test release

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,6 +74,6 @@ create_release:
     - apk add --update npm
   release:
     tag_name: ver_$(node -p "require('./package.json').version")
-    description: "Test release"
+    description: './ci_cd/scripts/${(node -p "require('./package.json').version")}.md'
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
