Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,10 +70,12 @@ create_release:
   image: registry.gitlab.com/gitlab-org/release-cli:latest
   variables:
     SSL_CERT_FILE: $IAV_CA_BUNDLE
+    PACKAGE_VERSION: $(node -p "require('./package.json').version")
   script:
     - apk add --update npm
+    - echo $PACKAGE_VERSION
   release:
     tag_name: ver_$(node -p "require('./package.json').version")
-    description: VER=$(node -p "require('./package.json').version"), ./ci_cd/scripts/$VER.md
+    description: ./ci_cd/scripts/$PACKAGE_VERSION.md
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
