--- a/.npmignore
+++ b/.npmignore
@@ -1,11 +1,11 @@
 # files for ci / cd
-./ci_cd
+/ci_cd
 
 # files only for development
-./node_modules
-./public
-./src/develop
-./src/App.css
-./src/App.js
-./src/index.css
-./src/index.js
+/node_modules
+/public
+/src/develop
+/src/App.css
+/src/App.js
+/src/index.css
+/src/index.js
