--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
       "last 1 safari version"
     ]
   },
+  "main": "./src/components/disaPage.js",
   "exports": {
     ".": "./src/components/disaPage.js",
     "./content": "./src/components/content.js"
