--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": false,
   "description": "This framework takes care of a DISA application's basic structure.",
+  "compiledComponentsDir": "./lib/",
   "contributors": [
     {
       "name": "Joerg Jonas Krahn",
