--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,13 @@
+/node_modules
+/build
+
 # files for ci / cd
 /ci_cd
 
 # files only for development
-/node_modules
 /public
 /src
+
+# config files
+.babelrc
+.gitlab-ci.yml
