--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^12.20.7",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "aws-amplify": "^3.3.26",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
@@ -23,6 +27,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.1",
+    "typescript": "^4.2.4",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
@@ -60,6 +65,7 @@
   "devDependencies": {
     "@babel/cli": "^7.13.14",
     "@babel/core": "^7.12.3",
-    "@babel/preset-react": "^7.13.13"
+    "@babel/preset-react": "^7.13.13",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
