--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@babel/cli": "^7.13.14",
     "@babel/core": "^7.12.3",
     "@babel/preset-react": "^7.13.13",
+    "@types/radium": "^0.24.3",
     "@types/react-router-dom": "^5.1.7"
   }
 }
