--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,12 @@
 {
     "presets": [
-        "@babel/preset-react",
-        "@babel/preset-typescript"
+        [
+            "@babel/preset-typescript",
+            {
+                "isTSX": true,
+                "allExtensions": true
+            }
+        ],
+        "@babel/preset-react"
     ]
 }
