--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ default:
   image: node:latest
   
   before_script:
-    - chmod -R +x ./scripts/ci_cd
+    - chmod -R +x ./ci_cd/scripts
 
 # Validate that the package name is properly scoped to the project's root namespace.
 # For more information, see https://docs.gitlab.com/ee/user/packages/npm_registry/#package-naming-convention
@@ -23,7 +23,7 @@ validate_package_scope:
         exit 1
       fi
   rules:
-    - if: '$CI_COMMIT_BRANCH == "feature_typescript"'
+    - if: '$CI_COMMIT_BRANCH == "master"'
 
 # If no .npmrc if included in the repo, generate a temporary one to use during the publish step
 # that is configured to publish to GitLab's NPM registry
@@ -45,7 +45,7 @@ create_npmrc:
     paths:
       - .npmrc
   rules:
-    - if: '$CI_COMMIT_BRANCH == "feature_typescript"'
+    - if: '$CI_COMMIT_BRANCH == "master"'
 
 # Publish the package. If the version in package.json has not yet been published, it will be
 # published to GitLab's NPM registry. If the version already exists, the publish command
@@ -64,7 +64,7 @@ publish_package:
         exit 1
       }
   rules:
-    - if: '$CI_COMMIT_BRANCH == "feature_typescript"'
+    - if: '$CI_COMMIT_BRANCH == "master"'
 
 # Create release so observer of this project will get a notification e-mail.
 create_release:
@@ -73,9 +73,9 @@ create_release:
   variables:
     SSL_CERT_FILE: $IAV_CA_BUNDLE
   script:
-    - apk add --update nodejs nodejs-npm
+    - apk add --update npm
   release:
     tag_name: ver_$(node -p "require('./package.json').version")
     description: ./ci_cd/release_notes/$(node -p "require('./package.json').version").md
   rules:
-    - if: '$CI_COMMIT_BRANCH == "feature_typescript"'
+    - if: '$CI_COMMIT_BRANCH == "master"'
