--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ default:
   image: node:latest
   
   before_script:
-    - chmod -R +x ./ci_cd/scripts
+    - chmod -R +x ./scripts/ci_cd/
 
 # Validate that the package name is properly scoped to the project's root namespace.
 # For more information, see https://docs.gitlab.com/ee/user/packages/npm_registry/#package-naming-convention
