--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,6 +76,6 @@ create_release:
     - apk add --update npm
   release:
     tag_name: ver_$(node -p "require('./package.json').version")
-    description: ./ci_cd/release_notes/$(node -p "require('./package.json').version").md
+    description: ./scripts/ci_cd/release_notes/$(node -p "require('./package.json').version").md
   rules:
     - if: '$CI_COMMIT_BRANCH == "feature_typescript"'
