--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "noEmit": true,
+        "outDir": "tsc_transpiled",
         "target": "es5",
         "lib": [
             "dom",
