--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
     "presets": [
-        "@babel/preset-react" ,
+        "@babel/preset-react",
+        "@babel/plugin-proposal-class-properties",
         [
             "@babel/preset-typescript",
             {
