--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     }
   ],
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
