--- a/.babelrc
+++ b/.babelrc
@@ -11,5 +11,8 @@
     ],
     "plugins": [
         "@babel/plugin-proposal-class-properties"
+    ],
+    "ignore": [
+        "src/**/*.d.ts"
     ]
 }
