fixed config files, .d.ts files will get ignored by babel, tsc will generate correct declaration files

--- a/.babelrc
+++ b/.babelrc
@@ -13,6 +13,6 @@
         "@babel/plugin-proposal-class-properties"
     ],
     "ignore": [
-        "src/**/*.d.ts"
+        "decl_generated/**/*.d.ts"
     ]
 }
