created tsc config file for library generation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,12 +20,9 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "jsx": "react-jsx",
-    "rootDir": "decl_generated"
+    "rootDir": "src"
   },
   "include": [
-    "decl_generated"
-  ],
-  "exclude": [
-    "decl_generated/links"
+    "src"
   ]
 }
