--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "dev": ".\\scripts\\windows\\build_devmode.bat",
     "build-lib-linux": "./scripts/ci_cd/create_lib.sh",
     "build-lib-windows": "scripts\\windows\\build.bat"
   },
