--- a/example/package.json
+++ b/example/package.json
@@ -9,14 +9,7 @@
     }
   ],
   "dependencies": {
-    "@td-d/disa-framework": "^0.0.2",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
+    "disa-framework": "file:../lib"
   },
   "scripts": {
     "start": "react-scripts start",
