--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "lib",
+    "outDir": "build",
     "declaration": true,
     "emitDeclarationOnly": true,
     "isolatedModules": true,
