fixed reference bug, added content to readme

--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,7 @@
     }
   ],
   "dependencies": {
-    "disa-framework": "file:../lib",
+    "disa-framework": "file:../build",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
