--- a/example/package.json
+++ b/example/package.json
@@ -9,11 +9,7 @@
     }
   ],
   "dependencies": {
-    "disa-framework": "file:../build",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-transition-group": "^4.4.1"
+    "disa-framework": "file:../build"
   },
   "scripts": {
     "start": "react-scripts start",
