--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
   ],
   "dependencies": {
     "aws-amplify": "^3.3.26",
-    "primereact": "^6.2.1",
     "primeflex": "^2.0.0",
-    "primeicons": "^4.1.0"
+    "primeicons": "^4.1.0",
+    "primereact": "^6.2.1"
   },
   "peerDependencies": {
     "react": "^17.0.1",
