--- a/example/.babelrc
+++ b/example/.babelrc
@@ -1,6 +1,6 @@
 {
     "presets": [
-        "@babel/preset-react" ,
+        "@babel/preset-react",
         [
             "@babel/preset-typescript",
             {
@@ -8,5 +8,11 @@
                 "allExtensions": true
             }
         ]
+    ],
+    "plugins": [
+        "@babel/plugin-proposal-class-properties"
+    ],
+    "ignore": [
+        "src/**/*.d.ts"
     ]
 }
