--- a/example/package.json
+++ b/example/package.json
@@ -8,9 +8,6 @@
       "email": "joerg.jonas.krahn@iav.de"
     }
   ],
-  "dependencies": {
-    "disa-framework": "file:../build"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -35,9 +32,13 @@
       "last 1 safari version"
     ]
   },
+  "dependencies": {
+    "disa-framework": "file:../build"
+  },
   "devDependencies": {
     "@babel/cli": "^7.13.14",
     "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.12.1",
     "typescript": "^4.2.4",
