--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,7 +60,8 @@ build_package:
     - ./scripts/ci_cd/setup_npm.sh
     - npm run build-linux
   artifacts:
-    - ./build
+    paths:
+      - ./build
   rules:
     - if: '$CI_COMMIT_BRANCH == "develop"'
 
