--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,6 +71,7 @@ build_package:
 publish_package:
   stage: publish
   script:
+    - ./scripts/ci_cd/setup_npm.sh
     - |
       {
         cd ./build &&
